--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp-util": "^3.0.7",
     "lodash": "^4.13.1",
     "mobile-detect": "^1.4.1",
+    "noisejs": "^2.1.0",
     "page": "^1.8.4",
     "preact": "^8.2.7",
     "preact-redux": "^2.0.3",
