--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "fastclick": "^1.0.6",
+    "fetch-ie8": "^1.5.0",
     "gsap": "^1.20.4",
     "gulp-util": "^3.0.7",
     "lodash": "^4.13.1",
